--- a/drupal/sites/all/themes/wise/sass/_flexslider.scss
+++ b/drupal/sites/all/themes/wise/sass/_flexslider.scss
@@ -73,6 +73,10 @@ html[xmlns] .slides {
 //
 // FlexSlider Default Theme
 //
+#block-views-wise-slider-block {
+  margin-bottom: 32px;
+}
+
 .flexslider {
   width: 940px;
   height: 395px;
